--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <resources>
 
+
     <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">false</item>
     </style>
@@ -7,9 +8,15 @@
     <!--&lt;!&ndash; Application theme. &ndash;&gt;-->
     <style name="AppTheme" parent="@style/AppBaseTheme">
         <item name="android:windowIsTranslucent">false</item>
-        <!--<item name="android:windowFullscreen">true</item>-->
         <!--&lt;!&ndash; All customizations that are NOT specific to a particular API-level can go here. &ndash;&gt;-->
     </style>
+
+    <!--<style name="AppTheme" parent="Base.Theme.AppCompat">-->
+    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--<item name="colorAccent">@color/colorAccent</item>-->
+    <!--</style>-->
 
     <style name="login_input">
         <item name="android:background">@android:color/transparent</item>
