--- a/kf5sdkModule/src/main/res/layout/kf5_activity_feed_back.xml
+++ b/kf5sdkModule/src/main/res/layout/kf5_activity_feed_back.xml
@@ -1,25 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/kf5_top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:background="@color/kf5_title_bar_bg">
 
         <ImageView
             android:id="@+id/kf5_return_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
             android:src="@drawable/kf5_back_img_bg"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/kf5_right_text_view"
@@ -34,7 +33,7 @@
             android:padding="@dimen/kf5_dimen_4dp"
             android:text="@string/kf5_submit"
             android:textColor="@drawable/kf5_text_bg"
-            android:textSize="@dimen/kf5_text_xh_size"/>
+            android:textSize="@dimen/kf5_text_xh_size" />
 
         <TextView
             android:id="@+id/kf5_title"
@@ -43,23 +42,15 @@
             android:layout_centerInParent="true"
             android:text="@string/kf5_feedback"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/kf5_text_xxh_size"/>
+            android:textSize="@dimen/kf5_text_xxh_size" />
     </RelativeLayout>
-
-    <View
-        android:id="@+id/kf5_deliver"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/kf5_top_layout"
-        android:background="@color/kf5_line_deliver_color"/>
 
 
     <EditText
         android:id="@+id/kf5_feed_back_content_et"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_layout"
-        android:layout_below="@+id/kf5_deliver"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@android:color/white"
         android:focusable="false"
         android:gravity="top|start"
@@ -67,13 +58,12 @@
         android:padding="@dimen/kf5_dimen_16dp"
         android:textColor="@color/kf5_et_content_text_color"
         android:textColorHint="@color/kf5_et_hint_text_color"
-        android:textSize="@dimen/kf5_text_size_18"/>
+        android:textSize="@dimen/kf5_text_size_18" />
 
     <LinearLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:padding="@dimen/kf5_dimen_8dp">
@@ -83,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@null"
-            android:src="@drawable/kf5_choice_img_source"/>
+            android:src="@drawable/kf5_choice_img_source" />
 
         <LinearLayout
             android:id="@+id/kf5_feed_back_image_layout"
@@ -91,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/kf5_dimen_4dp"
             android:orientation="vertical"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
