--- a/kf5sdkModule/src/main/res/layout/kf5_activity_look_feed_back.xml
+++ b/kf5sdkModule/src/main/res/layout/kf5_activity_look_feed_back.xml
@@ -1,26 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="${relativePackage}.${activityClass}">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="${relativePackage}.${activityClass}">
 
     <RelativeLayout
 
         android:id="@+id/kf5_top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:background="@color/kf5_title_bar_bg">
 
         <ImageView
             android:id="@+id/kf5_return_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:src="@drawable/kf5_back_img_bg"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/kf5_right_text_view"
@@ -35,7 +35,7 @@
             android:padding="@dimen/kf5_dimen_8dp"
             android:text="@string/kf5_contact_us"
             android:textColor="@drawable/kf5_text_bg"
-            android:textSize="@dimen/kf5_text_xh_size"/>
+            android:textSize="@dimen/kf5_text_xh_size" />
 
         <TextView
             android:id="@+id/kf5_title"
@@ -44,25 +44,18 @@
             android:layout_centerInParent="true"
             android:text="@string/kf5_feedback_list"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/kf5_text_xxh_size"/>
+            android:textSize="@dimen/kf5_text_xxh_size" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/kf5_deliver"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/kf5_top_layout"
-        android:background="@color/kf5_line_deliver_color"/>
 
     <com.kf5.sdk.system.widget.RefreshListView
         android:id="@+id/kf5_look_feed_back_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/kf5_deliver"
         android:background="@android:color/white"
         android:divider="@android:color/white"
         android:listSelector="@android:color/white"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -77,7 +70,7 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/kf5_no_feedback"
             android:textColor="@color/kf5_message_value_color"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </FrameLayout>
 
-</RelativeLayout>
+</LinearLayout>
