--- a/kf5sdkModule/src/p_imageviewer/main/res/values/style.xml
+++ b/kf5sdkModule/src/p_imageviewer/main/res/values/style.xml
@@ -8,5 +8,7 @@
     <item name="android:background">@null</item>
     <item name="android:windowBackground">@android:color/transparent</item>
     <item name="android:windowIsTranslucent">true</item>
+      <item name="colorPrimary">@color/kf5_actionsheet_blue</item>
+      <item name="colorAccent">@color/kf5_album_zhihu_album_dropdown_title_text</item>
   </style>
 </resources>
